[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
package-dir = {'' = 'src'}

[project]
name = 'cart-pole'
version = '0.1.0.dev0'
description = 'Cart-pole controller learned with reinforcement learning; running on the Raspberry Pi'
authors = [
    {name = 'Matthew Gerber', email = 'gerber.matthew@gmail.com'}
]
readme = 'README.md'
requires-python = '>=3.10'
dependencies = [

]

[project.optional-dependencies]
dev = [
    'bump2version~=1.0'
]

[project.urls]
Repository = 'https://github.com/MatthewGerber/cart-pole'
Homepage = 'https://matthewgerber.github.io/cart-pole'
