[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'cart-pole'
version = '0.1.0a0'
description = 'Cart-pole controller learned with reinforcement learning; running on the Raspberry Pi'
readme = 'README.md'
authors = [
    'Matthew Gerber <gerber.matthew@gmail.com>'
]
packages = [
    { include = 'cart_pol', from = 'src'}
]
repository = 'https://github.com/MatthewGerber/cart-pole'

[tool.poetry.dependencies]
python = '>=3.10'
matplotlib = '~=3.8'
pandas = '~=2.1'
raspberry-py = { path = 'submodules/raspberry-py', develop = true }
rlai = { path = 'submodules/rlai', develop = true}

[tool.poetry.group.dev.dependencies]
mypy = '~=1.10'
flake8 = '~=7.0'
