[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'cart-pole'
version = '0.1.0a0'
description = 'Cart-pole controller learned with reinforcement learning; running on the Raspberry Pi'
readme = 'README.md'
authors = [
    'Matthew Gerber <gerber.matthew@gmail.com>'
]
packages = [
    { include = 'cart_pole', from = 'src'}
]
repository = 'https://github.com/MatthewGerber/cart-pole'

[tool.poetry.dependencies]
python = '>=3.10,<3.13'
matplotlib = '~=3.8'
pandas = '~=2.1'
raspberry-py = { path = 'submodules/raspberry-py', develop = true }
rlai = { path = 'submodules/rlai', develop = true}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = '~=6.0'
flake8-annotations = '~=3.0'
flake8-docstrings = '~=1.7'
flake8-rst-docstrings = '~=0.3'
mypy = '~=1.6'